Добавлены исправления и сделан вывод ответов

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="incorrect">Неправильно!</string>
     <string name="yes">Да</string>
     <string name="no">Нет</string>
-    <string name="question0">Всего 5 колод карт в Гвинте?</string>
+    <string name="question0">В Гвинте всего 5 карточных колод?</string>
     <string name="question1">Эредин Бреакк Гласс представитель краснолюдов?</string>
     <string name="question2">Господин Зеркало заключил контракт с Йеннифер?</string>
     <string name="question3">Юлиан Альфред Панкрац виконт де Леттенхоф - полное имя Лютика?</string>
