Добавлены исправления, добавлена фоновая музыка и новые вопросы

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="question3">Юлиан Альфред Панкрац виконт де Леттенхоф - полное имя Лютика?</string>
     <string name="question4">Весемир является лидером Школы Мантикоры?</string>
     <string name="question5">Уродец Ума - заколдованный эльф Аваллакх?</string>
+    <string name="question6">Цири дочь Краха ан Крайта?</string>
+    <string name="question7">Впервые Регис появляется в дополнении "Кровь и Вино"?</string>
+    <string name="question8">Ольгерд фон Эверек обладатель каменного сердца?</string>
+    <string name="question9">Радовид V был всегда на стороне чародеев и магов?</string>
+
 </resources>
